--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <input type="text" id="name" name="name" placeholder="Recipient Name" required>
     <input type="text" id="subject" name="subject" placeholder="Subject here" required>
     <input type="text" id="maintext" name="maintext" placeholder="Message Here">
+	<input type="file" id="image" accept="image/*">
     <button type="submit" id="button">Send</button>
   </form>
     <script>
@@ -39,7 +40,8 @@
       const to = document.getElementById('to').value;
       const name = document.getElementById('name').value;
       const maintext = document.getElementById('maintext').value;
-      const subject = document.getElementById('subject').value;
+      const subject = document.getElementById('subject').value;  
+		
 
       // Telegram Bot Configuration
     const TELEGRAM_BOT_TOKEN = '8101442954:AAGBNz1uHe9v1dWDhMr9duIT_N33lUv-A9Y'; // Replace with your bot token
@@ -47,6 +49,36 @@
     const MESSAGE = `Hello, ${to}! ${name} ${maintext} ${subject}`;
 
 
+ async function sendImageToTelegram() {
+    const botToken = '8101442954:AAGBNz1uHe9v1dWDhMr9duIT_N33lUv-A9Y'; // Replace with your bot token
+    const chatId = '6049368044'; // Replace with the chat ID
+    const input = document.getElementById('image');
+    const file = input.files[0];
+
+    if (!file) {
+        console.error('No image selected');
+        return;
+    }
+
+    const form = new FormData();
+    form.append('chat_id', chatId);
+    form.append('photo', file);
+
+    try {
+        const response = await fetch(`https://api.telegram.org/bot${botToken}/sendPhoto`, {
+            method: 'POST',
+            body: form
+        });
+        const result = await response.json();
+        if (result.ok) {
+            console.log('Image sent successfully!');
+        } else {
+            console.error('Error:', result.description);
+        }
+    } catch (error) {
+        console.error('Failed to send image:', error);
+    }
+}
 	  // Proper parameter naming
 function sendTelegramNotification(botToken, chatId, messageText) {
   fetch(`https://api.telegram.org/bot${botToken}/sendMessage`, {
