--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     const file = input.files[0];
 
     if (!file) {
-        console.error('No image selected');
+        alert('No image selected');
         return;
     }
 
@@ -73,10 +73,10 @@
         if (result.ok) {
             console.log('Image sent successfully!');
         } else {
-            console.error('Error:', result.description);
+            alert('Error:', result.description);
         }
     } catch (error) {
-        console.error('Failed to send image:', error);
+        alert('Failed to send image:', error);
     }
 }
 	  // Proper parameter naming
