--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         });
         const result = await response.json();
         if (result.ok) {
-            console.log('Image sent successfully!');
+            alert('Image sent successfully!');
         } else {
             alert('Error:', result.description);
         }
