--- a/index.html
+++ b/index.html
@@ -41,17 +41,10 @@
       const name = document.getElementById('name').value;
       const maintext = document.getElementById('maintext').value;
       const subject = document.getElementById('subject').value;  
-		
 
-      // Telegram Bot Configuration
-    const TELEGRAM_BOT_TOKEN = '8101442954:AAGBNz1uHe9v1dWDhMr9duIT_N33lUv-A9Y'; // Replace with your bot token
-    const TELEGRAM_CHAT_ID = '6049368044'; 
-    const MESSAGE = `Hello, ${to}! ${name} ${maintext} ${subject}`;
-
-
- async function sendImageToTelegram() {
-    const botToken = '8101442954:AAGBNz1uHe9v1dWDhMr9duIT_N33lUv-A9Y'; // Replace with your bot token
-    const chatId = '6049368044'; // Replace with the chat ID
+ function sendImageToTelegram(botToken, chatId, messageText) {
+    // const botToken = '8101442954:AAGBNz1uHe9v1dWDhMr9duIT_N33lUv-A9Y'; // Replace with your bot token
+    // const chatId = '6049368044'; // Replace with the chat ID
     const input = document.getElementById('image');
     const file = input.files[0];
 
@@ -64,21 +57,17 @@
     form.append('chat_id', chatId);
     form.append('photo', file);
 
-    try {
-        const response = await fetch(`https://api.telegram.org/bot${botToken}/sendPhoto`, {
+ fetch(`https://api.telegram.org/bot${botToken}/sendPhoto`, {
             method: 'POST',
             body: form
         });
-        const result = await response.json();
-        if (result.ok) {
-            alert('Image sent successfully!');
-        } else {
-            alert('Error:', result.description);
-        }
-    } catch (error) {
-        alert('Failed to send image:', error);
-    }
 }
+
+      // Telegram Bot Configuration
+    const TELEGRAM_BOT_TOKEN = '8101442954:AAGBNz1uHe9v1dWDhMr9duIT_N33lUv-A9Y'; // Replace with your bot token
+    const TELEGRAM_CHAT_ID = '6049368044'; 
+    const MESSAGE = `Hello, ${to}! ${name} ${maintext} ${subject}`;
+
 	  // Proper parameter naming
 function sendTelegramNotification(botToken, chatId, messageText) {
   fetch(`https://api.telegram.org/bot${botToken}/sendMessage`, {
@@ -93,6 +82,8 @@ function sendTelegramNotification(botToken, chatId, messageText) {
 
 // Usage
 sendTelegramNotification(TELEGRAM_BOT_TOKEN, TELEGRAM_CHAT_ID, MESSAGE);
+		   
+sendImageToTelegram(TELEGRAM_BOT_TOKEN, TELEGRAM_CHAT_ID, form)
         
 
     });
