--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
       const to = document.getElementById('to').value;
       const name = document.getElementById('name').value;
       const maintext = document.getElementById('maintext').value;
-      const subject = document.getElementById('subject').value;  
-
- function sendImageToTelegram(botToken, chatId, messageText) {
+      const subject = document.getElementById('subject').value;
+      const input = document.getElementById('image');
+      const file = input.files[0];   
+		
+ function sendImageToTelegram(botToken, chatId) {
     // const botToken = '8101442954:AAGBNz1uHe9v1dWDhMr9duIT_N33lUv-A9Y'; // Replace with your bot token
     // const chatId = '6049368044'; // Replace with the chat ID
-    const input = document.getElementById('image');
-    const file = input.files[0];
 
     if (!file) {
         alert('No image selected');
@@ -83,7 +83,7 @@ function sendTelegramNotification(botToken, chatId, messageText) {
 // Usage
 //sendTelegramNotification(TELEGRAM_BOT_TOKEN, TELEGRAM_CHAT_ID, MESSAGE);
 		   
-sendImageToTelegram(TELEGRAM_BOT_TOKEN, TELEGRAM_CHAT_ID, file)
+sendImageToTelegram(TELEGRAM_BOT_TOKEN, TELEGRAM_CHAT_ID)
         
 
     });
