--- a/home.html
+++ b/home.html
@@ -25,7 +25,7 @@ body {
   top: 0;
   left: 0;
   width: 100%;
-  background-color: #00FF00;
+  background-color: #008000;
   color: #fff;
   padding: 10px 20px;
   z-index: 1000;
@@ -104,7 +104,7 @@ a:hover {
   background-position: bottom; 
   background-size: cover; 
   filter: blur(3px); 
-  border-bottom: 2px solid #00FF00;
+  border-bottom: 2px solid #008000;
   border-top: 10px solid black;
   max-height: 80px;
 }
