--- a/home.html
+++ b/home.html
@@ -216,31 +216,11 @@ blockquote {
       <p>Government Grants, General & Foundation Grants, Industry-Specific Grants, Minority/Women-Owned, Student/Business Grants.</p>
     </section>
 
-    <!- Buy Now -->
-    <section class="featured" id="featured">
-     <a href="https://paystack.com/pay/6yev0cz3ao"><h2><small>Access ebook</small><br><small>N24,500</small></h2></a>
-    </section>
-
     <!-- Featured Books -->
     <section class="featured" id="featured">
-      <h2>About The Book</h2>
-      <img src="moneybox.jpeg" alt="Moneybox" class="moneybox">
-	</div>
-      <p>The Book Excerpts</p>
-      <div class="book-grid">
-        <div class="book">
-          <h3>Understanding Market Dynamics</h3>
-          <p>Explore how economic indicators, geopolitical events, and market sentiment influence currency movements.</p>
-        </div>
-        <div class="book">
-          <h3>Analysis Techniques</h3>
-          <p>Learn to interpret chart patterns, moving averages, and oscillators to predict price trends.</p>
-        </div>
-        <div class="book">
-          <h3>Risk Management Strategies</h3>
-          <p>Implement position sizing, stop-loss orders, and leverage control to protect your capital and build a robust financial plan.</p>
-        </div>
-      </div>
+     <form method="post">
+		 
+	 </form>
     </section>
 
     <!-- Customer Reviews -->
