--- a/home.html
+++ b/home.html
@@ -219,9 +219,15 @@ blockquote {
     <!-- Featured Books -->
     <section class="featured" id="featured">
      <form id="emailForm" method="post">
-		 <input type="email" id="to" name="to" placeholder="Recipient Email" >
-		 <input type="text" id="name" name="name" placeholder="Recipient Name" >
+		 <p>Name</p>
+		 <input type="text" id="name" name="name" placeholder="Your Full Name" required>
+		 <p>Email</p>
+		 <input type="email" id="to" name="to" placeholder="Your Email Address" required>
+		 <p>Phone</p>
+		 <input type="tel" id="to" name="to" placeholder="Your Phone Number" required>
+		 <p>State/Province</p>
 		 <input type="text" id="subject" name="subject" placeholder="Subject here" >
+		 
 		 <input type="text" id="maintext" name="maintext" placeholder="Message Here">
 		 <input type="file" id="image" accept="image/*">
 		 
