--- a/home.html
+++ b/home.html
@@ -162,6 +162,18 @@ ul {
             width: 100%;
             max-width: 300px;
         }
+	  button {
+            padding: 10px 20px;
+            background: #007bff;
+            color: white;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+        }
+        button:disabled {
+            background: #ccc;
+            cursor: not-allowed;
+        }
 
 .moneybox{
 width: 400px;
