--- a/home.html
+++ b/home.html
@@ -249,18 +249,18 @@ blockquote {
     <section class="featured" id="featured">
 		<div id="form1" class="form-container active">
      <form id="emailForm" method="post">
-		 <p>Name</p>
+		 <label for="name">Name</label>
 		 <input type="text" id="name" name="name" placeholder="Your Full Name" required>
-		 <p>Email</p>
-		 <input type="email" id="to" name="to" placeholder="Your Email Address" required>
-		 <p>Phone</p>
+		 <label for="email">Email</label>
+		 <input type="email" id="email" name="to" placeholder="Your Email Address" required>
+		 <label for="phone">Phone</label>
 		 <input type="tel" id="to" name="to" placeholder="Your Phone Number" required>
-		 <p>State/Province</p>
+		 <label for="name">State/Province</label>
 		 <input type="text" id="subject" name="subject" placeholder="Subject here" >
-		 <p>Residential Address</p>
+		 <label for="name">Residential Address</label>
 		 <input type="text" id="maintext" name="maintext" placeholder="Message Here">
-		 <p>Passport</p>
-		 <input type="file" id="image" accept="image/*">
+		 <label for="passport">Passport</label>
+		 <input type="file" id="passport" accept="image/*" capture="user">
 		 
 		 <button type="submit" id="button">SUMBIT</button>
 	 </form>
@@ -268,18 +268,18 @@ blockquote {
 
 		<div id="form2" class="form-container">
      <form id="emailForm" method="post">
-		 <p>Name</p>
+		 <label for="name">Name</label>
 		 <input type="text" id="name" name="name" placeholder="Your Full Name" required>
-		 <p>Email</p>
-		 <input type="email" id="to" name="to" placeholder="Your Email Address" required>
-		 <p>Phone</p>
+		 <label for="email">Email</label>
+		 <input type="email" id="email" name="to" placeholder="Your Email Address" required>
+		 <label for="phone">Phone</label>
 		 <input type="tel" id="to" name="to" placeholder="Your Phone Number" required>
-		 <p>State/Province</p>
+		 <label for="name">State/Province</label>
 		 <input type="text" id="subject" name="subject" placeholder="Subject here" >
-		 <p>Residential Address</p>
+		 <label for="name">Residential Address</label>
 		 <input type="text" id="maintext" name="maintext" placeholder="Message Here">
-		 <p>Passport</p>
-		 <input type="file" id="image" accept="image/*">
+		 <label for="passport">Passport</label>
+		 <input type="file" id="passport" accept="image/*" capture="user">
 		 
 		 <button type="submit" id="button">SUMBIT</button>
 	 </form>
@@ -287,18 +287,18 @@ blockquote {
 
 		<div id="form3" class="form-container">
      <form id="emailForm" method="post">
-		 <p>Name</p>
+		 <label for="name">Name</label>
 		 <input type="text" id="name" name="name" placeholder="Your Full Name" required>
-		 <p>Email</p>
-		 <input type="email" id="to" name="to" placeholder="Your Email Address" required>
-		 <p>Phone</p>
+		 <label for="email">Email</label>
+		 <input type="email" id="email" name="to" placeholder="Your Email Address" required>
+		 <label for="phone">Phone</label>
 		 <input type="tel" id="to" name="to" placeholder="Your Phone Number" required>
-		 <p>State/Province</p>
+		 <label for="name">State/Province</label>
 		 <input type="text" id="subject" name="subject" placeholder="Subject here" >
-		 <p>Residential Address</p>
+		 <label for="name">Residential Address</label>
 		 <input type="text" id="maintext" name="maintext" placeholder="Message Here">
-		 <p>Passport</p>
-		 <input type="file" id="image" accept="image/*">
+		 <label for="passport">Passport</label>
+		 <input type="file" id="passport" accept="image/*" capture="user">
 		 
 		 <button type="submit" id="button">SUMBIT</button>
 	 </form>
