--- a/home.html
+++ b/home.html
@@ -174,6 +174,21 @@ ul {
             background: #ccc;
             cursor: not-allowed;
         }
+	  
+  input[type="file"] {
+    display: none;
+  }
+
+  /* Style the custom label */
+  .custom-file-label {
+    display: inline-block;
+    padding: 10px 20px;
+    background-color: #007bff;
+    color: white;
+    border-radius: 5px;
+    cursor: pointer;
+    text-align: center;
+  }
 
 .moneybox{
 width: 400px;
@@ -251,15 +266,20 @@ blockquote {
      <form id="emailForm" method="post">
 		 <label for="name">Name</label>
 		 <input type="text" id="name" name="name" placeholder="Your Full Name" required>
+		 
 		 <label for="email">Email</label>
 		 <input type="email" id="email" name="to" placeholder="Your Email Address" required>
+		 
 		 <label for="phone">Phone</label>
 		 <input type="tel" id="to" name="to" placeholder="Your Phone Number" required>
+		 
 		 <label for="name">State/Province</label>
 		 <input type="text" id="subject" name="subject" placeholder="Subject here" >
+		 
 		 <label for="name">Residential Address</label>
 		 <input type="text" id="maintext" name="maintext" placeholder="Message Here">
-		 <label for="passport">Passport</label>
+		 
+		 <label for="passport" class="custom-file-label">Passport</label>
 		 <input type="file" id="passport" accept="image/*" capture="user">
 		 
 		 <button type="submit" id="button">SUMBIT</button>
