--- a/app.html
+++ b/app.html
@@ -1450,7 +1450,7 @@
         </div>
         
         <div class="dashButtons">      
-          <button><div class="icon" style="background: #C9E4CA;"><i class="fa fa-user" aria-hidden="true"></i></div>Balance</button>
+          <button><div class="icon" style="background: rgba(173, 216, 230, 0.9);"><i class="fa fa-user" aria-hidden="true"></i></div>Balance</button>
           <button onclick="openModal('deposit')"><div class="icon"><i class="fa fa-arrow-up" aria-hidden="true"></i></div>Deposit</button>
           <button onclick="openModal('withdraw')"><div class="icon"><i class="fa fa-paper-plane" aria-hidden="true"></i></div>Withdraw</button>
           <button><div class="icon"><i class="fa fa-ellipsis-v" aria-hidden="true"></i></div>Details</button>
